--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
     <title>Search in the world wide web | search.subunit.vip</title>
     <link rel="stylesheet" href="files/index.css">
     <link rel="icon" href="files/favicon.png">
+    
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-EREY0TPQK7"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-EREY0TPQK7');
+</script>
 </head>
 <body>
 
