--- a/results.html
+++ b/results.html
@@ -7,6 +7,17 @@
     <title>Here it's better to search in the world wide web!</title>
     <link rel="stylesheet" href="files/search.css">
     <link rel="icon" href="files/favicon.png">
+    
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-EREY0TPQK7"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-EREY0TPQK7');
+</script>
+    
 </head>
 <body>
     <h1><a class="s" href="https://subunit.vip">subunit.vip</a> <input id="s" type="text" placeholder="Search..."> <img onclick="buttonClick()" src="files/loope.png" width="20" alt="loop" id="i"></h1>
